--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Star Wars Planets</string>
+    <string name="planet_name">Planet Name</string>
+    <string name="orbital_period">Orbital Period</string>
+    <string name="gravity">Gravity</string>
 </resources>
